--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "DefaultConnection": "data source = .; database = IQ_Mani; integrated security = true;" },
+  "ConnectionStrings": { "DefaultConnection": "data source = .; database = IQ_Mania; integrated security = true;" },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
     "MinimumLevel": {
